Simplify service limit clamping (#155)